--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,6 @@
-[workspace]
-members = [
-    "frontend",
-    "backend",
-    "shared",
-]
-resolver = "2"
-
-[workspace.package]
+[package]
+name = "black-hole-raytracer"
 version = "0.1.0"
-edition = "2021"
-publish = false
+edition = "2024"
 
-[workspace.dependencies]
-moon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
-zoon = { git = "https://github.com/MoonZoon/MoonZoon", branch = "main" }
+[dependencies]
