--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,19 @@ name = "black-hole-raytracer"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "black_hole_raytracer"
+path = "src/lib.rs"
+
+[[bin]]
+name = "black-hole-raytracer"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0.100"
 bytemuck = { version = "1.24.0", features = ["derive"] }
 env_logger = "0.11.8"
+image = "0.25"
 log = "0.4.28"
 nalgebra = "0.34.1"
 tokio = { version = "1", features = ["full"] }
