--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Rust
 /target
+
+# Python
+.venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# macOS
+.DS_Store
+
+# 出力画像
+*.png
+*.jpg
+*.jpeg
