--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,14 @@ image = "0.25"
 log = "0.4.28"
 nalgebra = "0.34.1"
 tokio = { version = "1", features = ["full"] }
-wgpu = { version = "27.0.1", features = ["wgsl"] }
+wgpu = { version = "22", features = ["wgsl"] }
 winit = { version = "0.30.12", features = ["default"] }
+
+# GUI関連（オプショナル）
+egui = { version = "0.29", optional = true }
+egui-winit = { version = "0.29", optional = true }
+egui-wgpu = { version = "0.29", optional = true }
+
+[features]
+default = ["gui"]
+gui = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu"]
