--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.100"
 bytemuck = { version = "1.24.0", features = ["derive"] }
+chrono = "0.4"
+clap = { version = "4.5", features = ["derive"] }
+csv = "1.3"
 env_logger = "0.11.8"
 image = "0.25"
 log = "0.4.28"
