--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = "0.4"
 clap = { version = "4.5", features = ["derive"] }
 csv = "1.3"
 env_logger = "0.11.8"
+exr = "1.72"
 image = "0.25"
 log = "0.4.28"
 nalgebra = "0.34.1"
