--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,5 @@ egui-winit = { version = "0.29", optional = true }
 egui-wgpu = { version = "0.29", optional = true }
 
 [features]
-default = ["gui"]
+default = []
 gui = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu"]
